mocke user and database inserts