@@ -1,39 +1,33 @@
 package ca.dheri.digitalizingreceipts.config;
 
 import jakarta.servlet.DispatcherType;
-
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.oauth2.client.oidc.userinfo.OidcUserService;
-import org.springframework.security.oauth2.client.userinfo.DefaultOAuth2UserService;
-import org.springframework.security.oauth2.client.userinfo.OAuth2UserRequest;
-import org.springframework.security.oauth2.client.userinfo.OAuth2UserService;
-import org.springframework.security.oauth2.core.oidc.user.OidcUser;
-import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.security.web.DefaultRedirectStrategy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.SimpleUrlAuthenticationSuccessHandler;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.List;
 
-import static org.springframework.boot.autoconfigure.security.servlet.PathRequest.toH2Console;
 import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
-class SecurityConfig  {
+class SecurityConfig {
+    @Autowired
+    private MockUserFilter mockUserFilter;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http, CorsConfigurationSource corsConfigurationSource) throws Exception {
@@ -49,6 +43,8 @@ class SecurityConfig  {
         });
 
         http
+                .addFilterBefore(mockUserFilter, UsernamePasswordAuthenticationFilter.class)
+
                 .authorizeHttpRequests((authorizeHttpRequests) -> authorizeHttpRequests
 //                        .requestMatchers("/").permitAll()
 //                        .requestMatchers(PathRequest.toH2Console()).permitAll()
@@ -63,14 +59,15 @@ class SecurityConfig  {
 //                    csrf.ignoringRequestMatchers(toH2Console());
                     csrf.ignoringRequestMatchers("/api/**");
                 })
-                .cors(customizer -> customizer.configurationSource(corsConfigurationSource)) // Apply CORS using Customizer
+                .cors(customizer -> customizer.configurationSource(corsConfigurationSource))
 
-                .oauth2Login(
-                        oauth2 -> oauth2
-                                .defaultSuccessUrl("http://localhost:3000", true)
+//                .oauth2Login(
+//                        oauth2 -> oauth2
+//                                .defaultSuccessUrl("http://localhost:3000", true)
+//
+//                )
+//                .oauth2Client(withDefaults())
 
-                )
-                .oauth2Client(withDefaults())
                 .sessionManagement((sessionManagement) -> sessionManagement
                         .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
                 )
@@ -78,11 +75,12 @@ class SecurityConfig  {
                 .logout((l -> l.logoutSuccessUrl("/api/").permitAll()));
         return http.build();
     }
+
     @Bean
     @Order(Ordered.HIGHEST_PRECEDENCE)
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000")); // Adjust as necessary
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
